<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CanWeKnowYouKingActivity2"
    android:background="@color/noir_fonce">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">


        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginBottom="40sp"
            android:gravity="center"
            android:text="@string/can_we_know_you_king"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="240dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_for_layout"
        android:orientation="vertical"
        android:paddingHorizontal="35sp"
        android:paddingVertical="20sp"
        android:layout_marginBottom="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whats_your_date_of_birth"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="165dp"
            android:layout_marginBottom="25sp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_month_year"
            android:textSize="17sp"
            android:textColor="@color/white">

        </TextView>

        <EditText
            android:id="@+id/birthdate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/faded_white"
            android:hint="@string/dd_mm_yy"
            android:inputType="date"
            android:minHeight="48dp"
            android:padding="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp"
            android:autofillHints="">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_for_layout"
        android:orientation="vertical"
        android:paddingHorizontal="35sp"
        android:paddingVertical="20sp"
        android:layout_marginBottom="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_should_we_call_you"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="165dp"
            android:layout_marginBottom="25sp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textSize="17sp"
            android:textColor="@color/white">

        </TextView>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/faded_white"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp"
            android:autofillHints="">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_for_layout"
        android:orientation="vertical"
        android:paddingHorizontal="35sp"
        android:paddingVertical="20sp"
        android:layout_marginBottom="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whats_your_height"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="165dp"
            android:layout_marginBottom="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/units"
                android:textSize="17sp"
                android:textColor="@color/grey">

            </TextView>

            <RadioGroup
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/feet_inches"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/feets_inches"
                    android:layout_marginEnd="10sp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/units_radio_selector"
                    android:textColor="@color/white">
                </RadioButton>

                <RadioButton
                    android:id="@+id/centimeters"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/centimeters"
                    android:layout_marginStart="10sp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/units_radio_selector"
                    android:checked="true"
                    android:textColor="@color/white">
                </RadioButton>

            </RadioGroup>



        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_cm"
            android:textSize="17sp"
            android:textColor="@color/white">

        </TextView>

        <EditText
            android:id="@+id/height_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/faded_white"
            android:hint="@string/___cm"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/continue_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/continue_button"
        android:layout_marginTop="10sp"
        android:padding="15sp">
    </Button>

</LinearLayout>
</ScrollView>