<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CanWeKnowYouKingActivity2"
    android:background="@color/noir_fonce">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15sp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginBottom="40sp"
        android:gravity="center"
        android:text="@string/can_we_know_you_king"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="240dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_for_layout"
        android:orientation="vertical"
        android:paddingHorizontal="35sp"
        android:paddingVertical="20sp"
        android:layout_marginBottom="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_your_current_and_target_weight"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="165dp"
            android:layout_marginBottom="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/units"
                android:textSize="17sp"
                android:textColor="@color/grey">

            </TextView>

            <RadioGroup
                android:id="@+id/lb_kg_groupe"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/pounds"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pounds"
                    android:layout_marginEnd="10sp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/units_radio_selector"
                    android:textColor="@color/white"
                    android:onClick="lb_kg_text">
                </RadioButton>

                <RadioButton
                    android:id="@+id/kilograms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kilograms"
                    android:layout_marginStart="10sp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/units_radio_selector"
                    android:checked="true"
                    android:textColor="@color/white"
                    android:onClick="lb_kg_text">
                </RadioButton>

            </RadioGroup>



        </LinearLayout>

        <TextView
            android:id="@+id/weight_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_weight_kg"
            android:textSize="17sp"
            android:textColor="@color/white">

        </TextView>

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:autofillHints=""
            android:background="@color/faded_white"
            android:hint="@string/___kg"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck">

        </EditText>

        <TextView
            android:id="@+id/target_weight_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_weight_kg"
            android:textSize="17sp"
            android:textColor="@color/white">

        </TextView>

        <EditText
            android:id="@+id/target_weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/faded_white"
            android:hint="@string/___kg"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_for_layout"
        android:orientation="vertical"
        android:paddingHorizontal="35sp"
        android:paddingVertical="20sp"
        android:layout_marginBottom="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_your_level_of_fitness"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="165dp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_current_level_of_fitness_to_align_the_workout_plan_with"
            android:textColor="@color/grey"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="165dp"
            android:layout_marginBottom="22sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20sp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scroll_view_1"
                    android:textSize="12sp"
                    android:textColor="@color/grey">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scroll_view_10"
                    android:textSize="12sp"
                    android:textColor="@color/grey"
                    android:gravity="end">

                </TextView>

            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/fitness_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/activity_level"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:trackColor="@color/noir_moins_fonce" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/worst_shape"
                    android:textSize="12sp"
                    android:textColor="@color/grey">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i_m_on_fire"
                    android:textSize="12sp"
                    android:textColor="@color/grey"
                    android:gravity="end">

                </TextView>

            </LinearLayout>

        </LinearLayout>





    </LinearLayout>

    <Button
        android:id="@+id/continue_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/continue_button"
        android:layout_marginTop="10sp"
        android:padding="15sp">
    </Button>

</LinearLayout>
</ScrollView>