<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CanWeKnowYouKingActivity3"
    android:background="@color/noir_fonce">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginBottom="40sp"
            android:gravity="center"
            android:text="@string/can_we_know_you_king"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="240dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_for_layout"
        android:orientation="vertical"
        android:paddingHorizontal="35sp"
        android:paddingVertical="20sp"
        android:layout_marginBottom="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_any_of_the_following_conditions"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="165dp"
            android:layout_marginBottom="25sp"/>

            <CheckBox
                android:id="@+id/condition_1"
                android:background="@color/faded_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/heart_disease"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginBottom="15sp"
                android:onClick="uncheck_none_of_the_above">
            </CheckBox>

        <CheckBox
            android:id="@+id/condition_2"
            android:background="@color/faded_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/severe_scoliosis"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="15sp"
            android:onClick="uncheck_none_of_the_above">
        </CheckBox>

        <CheckBox
            android:id="@+id/condition_3"
            android:background="@color/faded_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/spinal_damage"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="15sp"
            android:onClick="uncheck_none_of_the_above">
        </CheckBox>

        <CheckBox
            android:id="@+id/condition_4"
            android:background="@color/faded_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/benign_or_malignant_tumor"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="15sp"
            android:onClick="uncheck_none_of_the_above">
        </CheckBox>

        <CheckBox
            android:id="@+id/condition_5"
            android:background="@color/faded_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hypertention"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="15sp"
            android:onClick="uncheck_none_of_the_above">
        </CheckBox>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/grey"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="30sp"
            tools:ignore="SmallSp">
        </View>

        <CheckBox
            android:id="@+id/none_of_the_above"
            android:background="@color/faded_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/none_of_the_above"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10sp"
            android:onClick="uncheck_all_conditions">
        </CheckBox>

    </LinearLayout>

        <Button
            android:id="@+id/continue_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/continue_button"
            android:layout_marginTop="10sp"
            android:padding="15sp">
        </Button>

    </LinearLayout>
</ScrollView>